@@ -1,169 +1,80 @@
-# VSCode setup (Eclipse-style project)
+# Zaychess
 
-This repo is not Maven/Gradle. It uses an Eclipse/JDT layout with sources under `Chess/src`.
-Follow the steps below so VSCode (Java extension) treats it as a proper Java project.
+A Java-based Chess application with local, AI, and online multiplayer modes.
 
-## Prereqs
-- JDK 21 installed.
-- VSCode extension: "Extension Pack for Java" (redhat.java).
+## 🚀 Features
 
-## Files to add/edit
+*   **Local PvP**: Play hot-seat chess on a single computer.
+*   **Play vs Computer**: Challenge the integrated **Serendipity** chess engine.
+*   **Online Multiplayer**: Host or join games over a network.
+    *   **Direct Connect**: Host a TCP server and let a friend connect via IP.
+    *   **Online Matchmaking**: Connect to a central Relay Server for automatic matchmaking.
+*   **Save/Load**: Save your game state and resume later.
+*   **Move History**: view and navigate through past moves.
 
-1) `.vscode/settings.json`
-Set the source root and output folder.
+## 📁 Project Structure
 
-```
-{
-  "java.project.sourcePaths": [
-    "Chess/src"
-  ],
-  "java.project.outputPath": "bin",
-  "java.project.referencedLibraries": [
-    "Chess/engines/*.jar"
-  ],
-  "java.debug.settings.vmArgs": "--add-modules=jdk.incubator.vector",
-  "java.configuration.runtimes": [
-    {
-      "name": "JavaSE-21",
-      "path": "/Library/Java/JavaVirtualMachines/temurin-21.jdk/Contents/Home",
-      "default": true
-    }
-  ]
-}
-```
+The project is organized into a standard MVC architecture:
 
-2) `.project`
-Defines the Eclipse project so JDT LS imports it correctly.
+*   **`src/com/jeremyzay/zaychess`**
+    *   **`App.java`**: Application entry point.
+    *   **`model/`**: Core chess logic (Board, Pieces, Rules, Move generation).
+    *   **`view/`**: Swing GUI components (`ChessFrame`, `BoardPanel`, `MainMenuFrame`).
+    *   **`controller/`**: Game logic coordination (`GameController`, `GameLauncher`).
+    *   **`services/`**: Infrastructure services.
+        *   **`infrastructure/network/`**: Networking logic (`TcpHost`, `TcpClient`, `RelayClient`).
+        *   **`infrastructure/engine/`**: UCI Engine integration (`SerendipityEngineService`).
 
-```
-<?xml version="1.0" encoding="UTF-8"?>
-<projectDescription>
-	<name>ptp25-mi05-chess</name>
-	<comment></comment>
-	<projects>
-	</projects>
-	<buildSpec>
-		<buildCommand>
-			<name>org.eclipse.jdt.core.javabuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-	</buildSpec>
-	<natures>
-		<nature>org.eclipse.jdt.core.javanature</nature>
-	</natures>
-	<filteredResources>
-		<filter>
-			<id>1755487182293</id>
-			<name></name>
-			<type>30</type>
-			<matcher>
-				<id>org.eclipse.core.resources.regexFilterMatcher</id>
-				<arguments>node_modules|\.git|__CREATED_BY_JAVA_LANGUAGE_SERVER__</arguments>
-			</matcher>
-		</filter>
-	</filteredResources>
-</projectDescription>
+*   **`relay-server/`**: A Node.js based relay server for matchmaking.
+
+## 🛠️ Build & Run
+
+### Prerequisites
+*   **Java JDK 17+**
+*   **Node.js** (for Relay Server)
+
+### compiling
+```bash
+javac -d bin -sourcepath Chess/src -cp Chess/engines/Serendipity.jar Chess/src/com/jeremyzay/zaychess/App.java
 ```
 
-3) `.classpath`
-Declares the source/output folders and JRE container.
-
+### Running the App
+```bash
+java -cp bin:Chess/engines/Serendipity.jar com.jeremyzay.zaychess.App
 ```
-<?xml version="1.0" encoding="UTF-8"?>
-<classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="src" path="Chess/src"/>
-	<classpathentry kind="lib" path="Chess/engines/Serendipity.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry kind="output" path="bin"/>
-</classpath>
+*Note: If you are missing assets, append `Chess/src` to the classpath:*
+`java -cp bin:Chess/src:Chess/engines/Serendipity.jar com.jeremyzay.zaychess.App`
+
+### Running the Relay Server (for Online Matchmaking)
+The authentication server is a simple Node.js script.
+
+```bash
+node relay-server/server.js
 ```
+*Runs on port 8080 by default.*
 
-## Commands to apply the changes (from repo root)
+## 🌐 Multiplayer Guide
 
-```
-mkdir -p .vscode
-cat > .vscode/settings.json <<'EOF'
-{
-  "java.project.sourcePaths": [
-    "Chess/src"
-  ],
-  "java.project.outputPath": "bin",
-  "java.project.referencedLibraries": [
-    "Chess/engines/*.jar"
-  ],
-  "java.debug.settings.vmArgs": "--add-modules=jdk.incubator.vector",
-  "java.configuration.runtimes": [
-    {
-      "name": "JavaSE-21",
-      "path": "/Library/Java/JavaVirtualMachines/temurin-21.jdk/Contents/Home",
-      "default": true
-    }
-  ]
-}
-EOF
+### Method 1: Relay Server (Recommended)
+1.  Start the relay server (`node relay-server/server.js`).
+2.  Launch two instances of the app.
+3.  Click **"Online Matchmaking"** on both.
+4.  The server automatically pairs you up!
 
-cat > .project <<'EOF'
-<?xml version="1.0" encoding="UTF-8"?>
-<projectDescription>
-	<name>ptp25-mi05-chess</name>
-	<comment></comment>
-	<projects>
-	</projects>
-	<buildSpec>
-		<buildCommand>
-			<name>org.eclipse.jdt.core.javabuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-	</buildSpec>
-	<natures>
-		<nature>org.eclipse.jdt.core.javanature</nature>
-	</natures>
-	<filteredResources>
-		<filter>
-			<id>1755487182293</id>
-			<name></name>
-			<type>30</type>
-			<matcher>
-				<id>org.eclipse.core.resources.regexFilterMatcher</id>
-				<arguments>node_modules|\.git|__CREATED_BY_JAVA_LANGUAGE_SERVER__</arguments>
-			</matcher>
-		</filter>
-	</filteredResources>
-</projectDescription>
-EOF
+### Method 2: Direct TCP
+1.  **Host**: Click "Host Multiplayer". Wait for opponent.
+2.  **Client**: Click "Join Multiplayer", enter Host's IP address.
 
-cat > .classpath <<'EOF'
-<?xml version="1.0" encoding="UTF-8"?>
-<classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="src" path="Chess/src"/>
-	<classpathentry kind="lib" path="Chess/engines/Serendipity.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry kind="output" path="bin"/>
-</classpath>
-EOF
-```
+## 🚧 Status & Roadmap
 
-## VSCode step to re-import the project
+### Implemented
+*   ✅ Full Chess Rules (Castling, En Passant, Promotion)
+*   ✅ GUI with Drag & Drop / Click-Click
+*   ✅ Basic AI integration
+*   ✅ Local Save/Load system
+*   ✅ TCP Networking
+*   ✅ Relay Server Matchmaking (Beta)
 
-After adding the files, reload the Java workspace:
-- VSCode Command Palette: `Java: Clean Java Language Server Workspace`
-- Then reopen the workspace if prompted.
-
-## Run in VSCode
-
-Open `Chess/src/com/jeremyzay/zaychess/App.java` and click the Run button.
-
-## Optional: compile/run from terminal
-
-If you want to verify outside VSCode:
-
-```
-find Chess/src -name "*.java" > /tmp/sources.txt
-javac -d bin -cp "Chess/engines/Serendipity.jar" @/tmp/sources.txt
-rsync -a Chess/src/com/jeremyzay/zaychess/view/assets bin/com/jeremyzay/zaychess/view/
-java --add-modules=jdk.incubator.vector -cp "bin:Chess/engines/Serendipity.jar" com.jeremyzay.zaychess.App
-```
+### Working On
+*   🛠 **Linux Server Deployment**: Dockerizing the relay server.
+*   🛠 **Robustness**: Handling disconnects and server crashes gracefully.
